integration/tests/error_invalid_url.err
error: Invalid url
  --> tests/error_invalid_url.hurl:1:5
   |
 1 | GET ???
   |     ^^^ Invalid url <???>
   |

